# c-collections

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  agents.md
include/: dynarr.h  hashmap.h  llist.h  stack.h
src/: dynarr.c  dynarr.h  hashmap.c  llist.c  main.c  stack.c
